GRAMMARS_FILE = grammars

QUERYFILES = \
	queries/ada-highlights.scm \
	queries/asm-highlights.scm \
	queries/awk-highlights.scm \
	queries/bash-highlights.scm \
	queries/bison-highlights.scm \
	queries/c-highlights.scm \
	queries/caddy-highlights.scm \
	queries/cobol-highlights.scm \
	queries/cmake-highlights.scm \
	queries/commonlisp-highlights.scm \
	queries/cpp-highlights.scm \
	queries/c_sharp-highlights.scm \
	queries/css-highlights.scm \
	queries/cuda-highlights.scm \
	queries/d-highlights.scm \
	queries/diff-highlights.scm \
	queries/dockerfile-highlights.scm \
	queries/dot-highlights.scm \
	queries/erlang-highlights.scm \
	queries/fortran-highlights.scm \
	queries/glsl-highlights.scm \
	queries/go-highlights.scm \
	queries/haskell-highlights.scm \
	queries/hcl-highlights.scm \
	queries/html-highlights.scm \
	queries/idl-highlights.scm \
	queries/ini-highlights.scm \
	queries/java-highlights.scm \
	queries/javascript-highlights.scm \
	queries/json-highlights.scm \
	queries/kotlin-highlights.scm \
	queries/lua-highlights.scm \
	queries/make-highlights.scm \
	queries/markdown-highlights.scm \
	queries/markdown_inline-highlights.scm \
	queries/matlab-highlights.scm \
	queries/meson-highlights.scm \
	queries/muttrc-highlights.scm \
	queries/ocaml-highlights.scm \
	queries/pascal-highlights.scm \
	queries/perl-highlights.scm \
	queries/php-highlights.scm \
	queries/po-highlights.scm \
	queries/properties-highlights.scm \
	queries/proto-highlights.scm \
	queries/python-highlights.scm \
	queries/qmljs-highlights.scm \
	queries/r-highlights.scm \
	queries/ruby-highlights.scm \
	queries/rust-highlights.scm \
	queries/scala-highlights.scm \
	queries/smalltalk-highlights.scm \
	queries/sql-highlights.scm \
	queries/strace-highlights.scm \
	queries/swift-highlights.scm \
	queries/tcl-highlights.scm \
	queries/toml-highlights.scm \
	queries/turtle-highlights.scm \
	queries/typescript-highlights.scm \
	queries/verilog-highlights.scm \
	queries/vhdl-highlights.scm \
	queries/xml-highlights.scm \
	queries/yaml-highlights.scm

if USE_INTERNAL_EDIT
syntaxtsdir =		$(pkgdatadir)/syntax-ts
syntaxts_DATA =		$(GRAMMARS_FILE)

queriesdir =		$(pkgdatadir)/syntax-ts/queries
queries_DATA =		$(QUERYFILES)
endif

EXTRA_DIST =		$(GRAMMARS_FILE) \
			$(QUERYFILES)
